--- a/index.qmd
+++ b/index.qmd
@@ -2,10 +2,6 @@
 title: "laurenstrawberry.github.io"
 ---
 
-This is a Quarto website.
-
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
-
-```{r}
-1 + 1
+```{r install packages}
+library(usethis)
 ```
