completed cv page

--- a/cv.qmd
+++ b/cv.qmd
@@ -1,3 +1,79 @@
 ---
 Title: "CV"
 ---
+
+## **Education**
+
+|                                                                   |                              |
+|----------------------------------|-------------------------------------:|
+| University of California, Santa Barbara (UCSB), Santa Barbara, CA | *September 2020 - June 2024* |
+| **Bachelor of Science (B.S.) in Environmental Studies**           |                              |
+
+-   Concentration in Environmental and Water Quality
+
+-   Relevant Coursework: Water Supply and Demand, Water Quality, Rivers (Fluvial Geomorphology), Soil Science, Environmental Impact Analysis, Statistics, and Intro to MATLAB
+
+## **Experience**
+
+|                                                         |                              |
+|--------------------------------------|---------------------------------:|
+| ***President,*** UCSB Climbing Team, Santa Barbara, CA  |        December 2022-Present |
+| ***Sport Club Coordinator***                            | December 2021- December 2022 |
+
+-   Manage concurrent projects daily, and delegate tasks amongst a group of officers to ensure group goals are met by set deadlines
+
+-    Coordinate trips and competitions for a team of 60 people, while organizing to meet school requirements
+
+-   Learned to develop proactive systems that target common confusion before an event, such as educating team members about leave no trace ethics before trips and designing well-organized resources
+
+|                                                                               |                             |
+|---------------------------------|--------------------------------------:|
+| ***Host***, Alcazar Tapas Bar, Santa Barbara, CA                              | September 2023-Febuary 2024 |
+
+-   Communicating with customers in a friendly and professional manner
+
+-   Guiding the flow of the restaurant to make sure servers are not overwhelmed, while taking initiative to lessen the load of team members
+
+|                                                                                                |                          |
+|-------------------------------|----------------------------------------:|
+| ***Restoration Intern***, Cheadle Center for Biodiversity & Ecological Restoration, Goleta, CA | September -December 2022 |
+
+-   Evaluated environmental issues in a wetland restoration project
+
+-   Implemented strategies for creating a climate resilient habitat that fosters biodiversity specifically for native plant and animal species
+
+|                                                          |                              |
+|----------------------------------------------------------|-----------------------------:|
+| ***Routesetter,*** Santa Barbara Rock Gym, Santa Barbara | February 2023-September 2023 |
+
+-    Collaborated with other routesetters to create routes for climbers of all levels and sizes
+
+-    Designed creative routes and created them using technical skills, finding creative solutions when gear wears out
+
+|                                                                 |                            |
+|-----------------------------------------------------------------|---------------------------:|
+| ***Calpirg Intern***, UC Santa Barbara, Remote                  | *December 2020-April 2021* |
+
+-   Registered college students for the New Voters Campaign, using covid-safe grassroot methods such as cold calling to persuade people to vote and walk them through the registration process.
+
+## **Skills**
+
+-   Microsoft Office Suite (Word, PowerPoint, and Excel)
+
+-   Data Analysis using Excel
+
+-   MATLAB
+
+-   R studio
+
+-   Customer Satisfaction
+
+-   Team Leadership and Management
+
+-   Spanish: Conversational
+
+## **Interests**
+
+Rock Climbing: outdoors and competitively (2011-present), Skiing, Backpacking, Surfing, Photography, Jewelry Making
+
+Building systems which focus on improving human and environmental health in tandem by creating a healthy earth which focuses on supplying plentiful high nutritional food and clean water 
