--- a/climbing.qmd
+++ b/climbing.qmd
@@ -1,3 +1,23 @@
 ---
 Title: Climbing 
 ---
+
+## Proudest Achievements 
+
+**Sport**
+
+8/2023: Sky Pilot 5.13d
+
+**Boulder**
+
+1/2024: Relic V9
+
+3/2023: Yogi Variation V9
+
+6/2020: Last Stand Low V10-
+
+**Competition**
+
+2018 14th in Open Women's Pan American Championships
+
+2015 Youth C Boulder National Champion
