--- a/climbing.qmd
+++ b/climbing.qmd
@@ -2,15 +2,23 @@
 Title: Climbing 
 ---
 
-## Proudest Achievements 
+## Proudest Achievements
 
 **Sport**
 
 8/2023: Sky Pilot 5.13d
 
++-----------------------------------------------------------+---------------------------------------------+
+| ![](images/DSC03695-Edit.jpg){width="391"}                | ![](images/DSC03668-Edit.JPEG){width="391"} |
++-----------------------------------------------------------+---------------------------------------------+
+|                                                           |                                             |
++-----------------------------------------------------------+---------------------------------------------+
+
 **Boulder**
 
 1/2024: Relic V9
+
+![](images/IMG_2729-01.JPG){width="310"}
 
 3/2023: Yogi Variation V9
 
