more photos to climbing page

--- a/climbing.qmd
+++ b/climbing.qmd
@@ -28,4 +28,8 @@ Title: Climbing
 
 2018 14th in Open Women's Pan American Championships
 
+![](images/IMG_E714C034B312-1.jpeg){width="550"}
+
 2015 Youth C Boulder National Champion
+
+![](images/IMG_9F8EF8E55B45-1.jpeg){width="369"}
