--- a/climbing.qmd
+++ b/climbing.qmd
@@ -11,14 +11,14 @@ Title: Climbing
 +-----------------------------------------------------------+---------------------------------------------+
 | ![](images/DSC03695-Edit.jpg){width="391"}                | ![](images/DSC03668-Edit.JPEG){width="391"} |
 +-----------------------------------------------------------+---------------------------------------------+
-|                                                           |                                             |
-+-----------------------------------------------------------+---------------------------------------------+
+
+taken by @connorbrownphotography
 
 **Boulder**
 
 1/2024: Relic V9
 
-![](images/IMG_2729-01.JPG){width="310"}
+![photo by Tesla Mitchell](images/IMG_2729-01.JPG){width="310"}
 
 3/2023: Yogi Variation V9
 
@@ -28,7 +28,7 @@ Title: Climbing
 
 2018 14th in Open Women's Pan American Championships
 
-![](images/IMG_E714C034B312-1.jpeg){width="550"}
+![photo by Tom Condie](images/IMG_E714C034B312-1.jpeg){width="550"}
 
 2015 Youth C Boulder National Champion
 
