--- a/photography.qmd
+++ b/photography.qmd
@@ -6,24 +6,24 @@ Title: "gallery"
 
 Feel free to contact me about photo inquiries!
 
-![](images/DSCF6872.jpg){width="150cm"}
+![Charlie Smith on Spectere in Bishop, CA](images/DSCF6872.jpg){width="150cm"}
 
-![](images/DSCF5506-01.jpg){fig-align="center" width="18cm"}
+![Joshua Tree at golden hour](images/DSCF5506-01.jpg){fig-align="center" width="18cm"}
 
-![](images/DSCF2688 copy.jpg){fig-align="center" width="19.2cm"}
+![Bella Tidmore making her way up the wall as the tide rises at Mickey's Beach](images/DSCF2688 copy.jpg){fig-align="center" width="19.2cm"}
 
-![](images/v7 arete swing.jpg){fig-align="center" width="17.1cm"}
+![Josh Lowy holding the swing in Kirkwood](images/v7 arete swing.jpg){fig-align="center" width="17.1cm"}
 
-![](images/whale earrings 2.jpg){fig-align="center" width="33.8cm"}
+![Whale earrings I made](images/whale earrings 2.jpg){fig-align="center" width="33.8cm"}
 
-![](images/IMG_6705.jpg){fig-align="center" width="38.3cm"}
+![Bella Tidmore sending White Rastafarian](images/IMG_6705.jpg){fig-align="center" width="38.3cm"}
 
-![](images/DSCF6986.jpg){fig-align="center" width="16.7cm"}
+![Madeleine Press at 2024 Collegiate Nationals](images/DSCF6986.jpg){fig-align="center" width="16.7cm"}
 
-![](images/DSCF4868.jpg){fig-align="center" width="31cm"}
+![Rushing river in Chamonix](images/DSCF4868.jpg){fig-align="center" width="31cm"}
 
-![](images/DSC03516.jpeg)
+![Autumn Kerr soaking up the last moments of sun](images/DSC03516.jpeg)
 
-![](images/yellow flower 1.jpg)
+![Earrings by me and abalone by ocean](images/yellow flower 1.jpg)
 
-![](images/DSCF5996 1-01.jpg)
+![Angelina Quirente on Wangerbanger](images/DSCF5996 1-01.jpg)
