--- a/photography.qmd
+++ b/photography.qmd
@@ -10,11 +10,11 @@ Feel free to contact me about photo inquiries!
 
 ![Joshua Tree at golden hour](images/DSCF5506-01.jpg){fig-align="center" width="18cm"}
 
-![Bella Tidmore making her way up the wall as the tide rises at Mickey's Beach](images/DSCF2688 copy.jpg){fig-align="center" width="19.2cm"}
+![Bella Tidmore making her way up the wall as the tide rises at Mickey's Beach](images/DSCF2688%20copy.jpg){fig-align="center" width="19.2cm"}
 
-![Josh Lowy holding the swing in Kirkwood](images/v7 arete swing.jpg){fig-align="center" width="17.1cm"}
+![Josh Lowy holding the swing in Kirkwood](images/v7%20arete%20swing.jpg){fig-align="center" width="17.1cm"}
 
-![Whale earrings I made](images/whale earrings 2.jpg){fig-align="center" width="33.8cm"}
+![Whale earrings I made](images/whale%20earrings%202.jpg){fig-align="center" width="33.8cm"}
 
 ![Bella Tidmore sending White Rastafarian](images/IMG_6705.jpg){fig-align="center" width="38.3cm"}
 
@@ -24,6 +24,6 @@ Feel free to contact me about photo inquiries!
 
 ![Autumn Kerr soaking up the last moments of sun](images/DSC03516.jpeg)
 
-![Earrings by me and abalone by ocean](images/yellow flower 1.jpg)
+![Earrings by me and abalone by ocean](images/yellow%20flower%201.jpg)
 
-![Angelina Quirente on Wangerbanger](images/DSCF5996 1-01.jpg)
+![Angelina Quirente on Wangerbanger](images/DSCF5996%201-01.jpg)
