fix email and linkedin links

--- a/index.qmd
+++ b/index.qmd
@@ -7,11 +7,11 @@ about:
   image-shape: round
   links:
     - text: LinkedIn
-      href: www.linkedin.com/in/lauren-berry-es
+      href: https://www.linkedin.com/in/lauren-berry-es/
     - text: GitHub
       href: https://github.com/laurenstrawberry
     - text: Email
-      href: laurenaberry02@gmail.com
+      href: "mailto:laurenaberry02@gmail.com"
     - text: Instagram
       href: https://www.instagram.com/laurenn.berry/
 ---
